--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
 
 
 
+    <div id="contact" class="container">
+      <h1>contact</h1>
+      <p>email: ashlylau@gmail.com</p>
+      <p>location: Singapore</p>
+    </div>
+
+
+
     <footer class="container">Ashly Lau Copyright &copy; 2018</footer>
 
   </body>
