filled in details for sections. added more media responsiveness

--- a/index.html
+++ b/index.html
@@ -57,11 +57,21 @@
       </div>
     </div> -->
 
+    <div id="image" class="top-margin container">
+      <img src="./img/tumblr.jpg" class="img-responsive">
+    </div>
 
 
-    <div id="about" class="container content-margin">
+    <div id="about" class="container">
       <h1>about</h1>
-      <p>computing student at Imperial College London | software r&d intern at HP Inc</p>
+      <p>computing student at Imperial College London</p>
+      <p>software r&d intern at HP Inc</p>
+      <p>accredited womens' artistic gymnastics judge</p>
+      <p>aspiring freelance web developer</p>
+      <p>amateur freerunner</p>
+      <p>tv show binge watcher</p>
+      <p>autograph collector</p>
+      <p>dog lover</p>
     </div>
 
 
@@ -74,7 +84,12 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading">Software R&D Intern</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h5>HP Inc.</h5>
+          <h6>Jul 2018 - Present</h6>
+          <ul>
+            <li>Implemented image recognition capabilities to HP’s new home and work printing solution</li>
+            <li>Assisted in the organizing and running of HP PrintHack Asia 2018 </li>
+          </ul>
         </div>
       </div>
 
@@ -84,7 +99,13 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading">Account Executive Intern</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h5>DDB Worldwide Pte Ltd</h5>
+          <h6>Feb 2017 - Apr 2017</h6>
+          <ul>
+            <li>Worked with the team to brief media and creative staff, assisting with the formulation of marketing strategies</li>
+            <li>Managed client accounts and projects, facilitating communications between clients and creatives</li>
+            <li>Clientele: StarHub, McDonalds, Singapore Tourism Board</li>
+          </ul>
         </div>
       </div>
 
@@ -94,7 +115,25 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading">Accredited Womens' Artistic Gymnastics Judge</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h5>International Gymnastics Federation</h5>
+          <h6>Jan 2017 - Present</h6>
+          <ul>
+            <li>Selected to be part of the main judging panel for various international competitions</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="media">
+        <div class="media-left media-top">
+          <img src="./img/dreams.jpg" class="media-object" style="width:80px">
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading">Artistic Gymnastics Coach</h4>
+          <h5>Dreams Gymnastics</h5>
+          <h6>Jan 2016 - Sep 2017</h6>
+          <ul>
+            <li>Constructed training plans to ensure safe skill progression for gymnasts</li>
+          </ul>
         </div>
       </div>
 
@@ -104,7 +143,14 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading">National Team Member</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h5>Singapore Gymnastics</h5>
+          <h6>Jan 2012 - Dec 2016</h6>
+          <p>Competitions include:</p>
+          <ul>
+            <li>Glasgow, 2015: World Artistic Gymnastics Championships</li>
+            <li>Singapore, 2015: Southeast Asian Games - Team Silver</li>
+            <li>Glasgow, 2014: Commonwealth Games</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -120,7 +166,13 @@
         <div class="media-body">
           <h4 class="media-heading">Imperial College London</h4>
           <h5>Computing - Artificial Intelligence (MEng)</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h6>2017 - 2021</h6>
+          <ul>
+            <li>Year 1 Overall Grade: A</li>
+            <li>Year 1 Courses: Mathematical Methods, Logic, Discrete Structures, Hardware, Databases, Reasoning About Programs, Architecture</li>
+            <li>Programming Courses: Haskell, Java, C</li>
+            <li>Societies: Parkour (Events Officer), Singapore Society, Art Soc</li>
+          </ul>
         </div>
       </div>
 
@@ -131,7 +183,11 @@
         <div class="media-body">
           <h4 class="media-heading">Raffles Institution</h4>
           <h5>GCE-A Level, 7 Distinctions</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h6>2015 - 2016</h6>
+          <ul>
+            <li>Subjects: Physics, Chemistry, Mathematics, Economics, General Paper, Higher Chinese, Project Work</li>
+            <li>Activities: Artistic Gymnastics</li>
+          </ul>
         </div>
       </div>
 
@@ -142,7 +198,11 @@
         <div class="media-body">
           <h4 class="media-heading">Raffles Girls' School</h4>
           <h5>Raffles Diploma, Distinction</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. </p>
+          <h6>2011 - 2014</h6>
+          <ul>
+            <li>Subjects: Physics, Chemistry, Biology, Mathematics, Higher Chinese, English, Geography, Philosophy, Social Studies</li>
+            <li>Activities: Artistic Gymnastics</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -177,7 +237,14 @@
     <div id="contact" class="container">
       <h1>contact</h1>
       <p>email: ashlylau@gmail.com</p>
-      <p>location: Singapore</p>
+      <p>location: Singapore | London SW5 9LZ</p>
+      <p>
+        <a href="https://www.facebook.com/ashly.lau"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/ashly.lau/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/ashly-lau"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/ashlylau"><i class="fab fa-github"></i></a>
+        <a href="./AshlyResume.pdf" download><i class="fas fa-file-alt"></i></a>
+      </p>
     </div>
 
 
