--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <div id="project-page" class="container content-margin">
+    <div id="project-page" class="container top-margin">
       <h1>A Pointe Sleeve</h1>
       <h3>2018</h3>
       <img src="./img/balletshoe-sleeve.jpg" class="img-responsive" alt="balletshoe">
