updated logo images

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/blkj.png" class="media-object" style="width:80px">
+          <img src="./img/blkj.jpg" class="media-object" style="width:80px">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Account Executive Intern</h4>
@@ -139,7 +139,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/sg.png" class="media-object" style="width:80px">
+          <img src="./img/sglogo.png" class="media-object" style="width:80px">
         </div>
         <div class="media-body">
           <h4 class="media-heading">National Team Member</h4>
