updated logo images

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <h4 class="media-heading">Software R&D Intern</h4>
           <h5>HP Inc.</h5>
           <h6>Jul 2018 - Present</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Implemented image recognition capabilities to HP’s new home and work printing solution</li>
             <li>Assisted in the organizing and running of HP PrintHack Asia 2018 </li>
           </ul>
@@ -101,7 +101,7 @@
           <h4 class="media-heading">Account Executive Intern</h4>
           <h5>DDB Worldwide Pte Ltd</h5>
           <h6>Feb 2017 - Apr 2017</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Worked with the team to brief media and creative staff, assisting with the formulation of marketing strategies</li>
             <li>Managed client accounts and projects, facilitating communications between clients and creatives</li>
             <li>Clientele: StarHub, McDonalds, Singapore Tourism Board</li>
@@ -118,7 +118,7 @@
           <h5>International Gymnastics Federation</h5>
           <h6>Jan 2017 - Present</h6>
           <ul>
-            <li>Selected to be part of the main judging panel for various international competitions</li>
+            <li class="hide-mobile">Selected to be part of the main judging panel for various international competitions</li>
           </ul>
         </div>
       </div>
@@ -131,7 +131,7 @@
           <h4 class="media-heading">Artistic Gymnastics Coach</h4>
           <h5>Dreams Gymnastics</h5>
           <h6>Jan 2016 - Sep 2017</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Constructed training plans to ensure safe skill progression for gymnasts</li>
           </ul>
         </div>
@@ -145,8 +145,8 @@
           <h4 class="media-heading">National Team Member</h4>
           <h5>Singapore Gymnastics</h5>
           <h6>Jan 2012 - Dec 2016</h6>
-          <p>Competitions include:</p>
-          <ul>
+          <p class="hide-mobile">Competitions include:</p>
+          <ul class="hide-mobile">
             <li>Glasgow, 2015: World Artistic Gymnastics Championships</li>
             <li>Singapore, 2015: Southeast Asian Games - Team Silver</li>
             <li>Glasgow, 2014: Commonwealth Games</li>
@@ -167,7 +167,7 @@
           <h4 class="media-heading">Imperial College London</h4>
           <h5>Computing - Artificial Intelligence (MEng)</h5>
           <h6>2017 - 2021</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Year 1 Overall Grade: A</li>
             <li>Year 1 Courses: Mathematical Methods, Logic, Discrete Structures, Hardware, Databases, Reasoning About Programs, Architecture</li>
             <li>Programming Courses: Haskell, Java, C</li>
@@ -184,7 +184,7 @@
           <h4 class="media-heading">Raffles Institution</h4>
           <h5>GCE-A Level, 7 Distinctions</h5>
           <h6>2015 - 2016</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Subjects: Physics, Chemistry, Mathematics, Economics, General Paper, Higher Chinese, Project Work</li>
             <li>Activities: Artistic Gymnastics</li>
           </ul>
@@ -199,7 +199,7 @@
           <h4 class="media-heading">Raffles Girls' School</h4>
           <h5>Raffles Diploma, Distinction</h5>
           <h6>2011 - 2014</h6>
-          <ul>
+          <ul class="hide-mobile">
             <li>Subjects: Physics, Chemistry, Biology, Mathematics, Higher Chinese, English, Geography, Philosophy, Social Studies</li>
             <li>Activities: Artistic Gymnastics</li>
           </ul>
