--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="ashly" content="online-resume">
-    <meta name="viewport" content="width=device-width; minimum-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scle=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/mystylesheet.css">
     <link rel="stylesheet" href="./css/webfonts/all.css">
