added favicon for website

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="ashly" content="online-resume">
+    <meta name="ashly lau" content="online resume for things about Ashly that are cool and not on her LinkedIn page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
+    <link rel="canonical" href="https://ashlylau.github.io/">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/mystylesheet.css">
     <link rel="stylesheet" href="./css/webfonts/all.css">
     <link rel="stylesheet" href="./css/webfonts/brands.css">
-    <title>ashly</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <title>ashly </title>
   </head>
 
   <body>
@@ -17,8 +23,8 @@
         <div class="container">
           <h1><a href="index.html" style="text-decoration: none">ashly.</a>
             <span class="navbar-text navbar-right">
-              <a href="https://www.linkedin.com/in/ashly-lau"><i class="fab fa-linkedin"></i></a>
-              <a href="https://github.com/ashlylau"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/ashly-lau" rel="external nofollow"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/ashlylau" rel="external nofollow"><i class="fab fa-github"></i></a>
               <a href="./AshlyResume.pdf" download><i class="fas fa-file-alt"></i></a>
               <i class="fas fa-envelope"></i>
             </span>
@@ -58,15 +64,16 @@
     </div> -->
 
     <div id="image" class="top-margin container">
-      <img src="./img/tumblr.jpg" class="img-responsive">
+      <img src="./img/tumblr.jpg" class="img-responsive" alt="ashly lau website image">
     </div>
 
 
     <div id="about" class="container">
       <h1>about</h1>
-      <p>computing student at Imperial College London</p>
-      <p>software r&d intern at HP Inc</p>
+      <p>computing student at imperial college london</p>
+      <p>software r&d intern at hp inc</p>
       <p>accredited womens' artistic gymnastics judge</p>
+      <p>ex-national gymnast</p>
       <p>aspiring freelance web developer</p>
       <p>amateur freerunner</p>
       <p>tv show binge watcher</p>
@@ -80,7 +87,7 @@
       <h1>experience</h1>
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/hplogo.png" class="media-object" style="width:80px">
+          <img src="./img/hplogo.png" class="media-object" style="width:80px" alt="ashly lau HP internship">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Software R&D Intern</h4>
@@ -95,7 +102,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/blkj.jpg" class="media-object" style="width:80px">
+          <img src="./img/blkj.jpg" class="media-object" style="width:80px" alt="ashly lau BLK J internship">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Account Executive Intern</h4>
@@ -111,7 +118,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/fig.png" class="media-object" style="width:80px">
+          <img src="./img/fig.png" class="media-object" style="width:80px" alt="ashly lau national gymnastics judge">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Accredited Womens' Artistic Gymnastics Judge</h4>
@@ -125,7 +132,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/dreams.jpg" class="media-object" style="width:80px">
+          <img src="./img/dreams.jpg" class="media-object" style="width:80px" alt="ashly lau dreams gymnastics coach">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Artistic Gymnastics Coach</h4>
@@ -139,10 +146,10 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/sglogo.png" class="media-object" style="width:80px">
+          <img src="./img/sglogo.png" class="media-object" style="width:80px" alt="ashly lau national artistic gymnast">
         </div>
         <div class="media-body">
-          <h4 class="media-heading">National Team Member</h4>
+          <h4 class="media-heading">National Gymnast</h4>
           <h5>Singapore Gymnastics</h5>
           <h6>Jan 2012 - Dec 2016</h6>
           <p class="hide-mobile">Competitions include:</p>
@@ -161,7 +168,7 @@
       <h1>education</h1>
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/iclcrest.png" class="media-object" style="width:80px">
+          <img src="./img/iclcrest.png" class="media-object" style="width:80px" alt="ashly lau imperial college london computing">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Imperial College London</h4>
@@ -178,7 +185,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/ri.png" class="media-object" style="width:80px">
+          <img src="./img/ri.png" class="media-object" style="width:80px" alt="ashly lau raffles institution">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Raffles Institution</h4>
@@ -193,7 +200,7 @@
 
       <div class="media">
         <div class="media-left media-top">
-          <img src="./img/rgs.png" class="media-object" style="width:80px">
+          <img src="./img/rgs.png" class="media-object" style="width:80px" alt="ashly lau raffles girls' school">
         </div>
         <div class="media-body">
           <h4 class="media-heading">Raffles Girls' School</h4>
@@ -239,10 +246,10 @@
       <p>email: ashlylau@gmail.com</p>
       <p>location: Singapore | London SW5 9LZ</p>
       <p>
-        <a href="https://www.facebook.com/ashly.lau"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-        <a href="https://www.instagram.com/ashly.lau/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/ashly-lau"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/ashlylau"><i class="fab fa-github"></i></a>
+        <a href="https://www.facebook.com/ashly.lau" rel="external nofollow"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/ashly.lau/" rel="external nofollow"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/ashly-lau" rel="external nofollow"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/ashlylau" rel="external nofollow"><i class="fab fa-github"></i></a>
         <a href="./AshlyResume.pdf" download><i class="fas fa-file-alt"></i></a>
       </p>
     </div>
