--- a/project.html
+++ b/project.html
@@ -2,12 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="ashly" content="online-resume">
+    <meta name="ashly lau" content="online resume for things about Ashly that are cool and not on her LinkedIn page">
     <meta name="viewport" content="width=device-width; minimum-scale=1, maximum-scale=1">
+    <link rel="canonical" href="https://ashlylau.github.io/">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/mystylesheet.css">
     <link rel="stylesheet" href="./css/webfonts/all.css">
     <link rel="stylesheet" href="./css/webfonts/brands.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <title>ashly | project-name</title>
   </head>
 
@@ -17,8 +23,8 @@
         <div class="container">
           <h1><a href="index.html" style="text-decoration: none">ashly.</a>
             <span class="navbar-text navbar-right">
-              <a href="https://www.linkedin.com/in/ashly-lau"><i class="fab fa-linkedin"></i></a>
-              <a href="https://github.com/ashlylau"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/ashly-lau" rel="external nofollow"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/ashlylau" rel="external nofollow"><i class="fab fa-github"></i></a>
               <a href="./AshlyResume.pdf" download><i class="fas fa-file-alt"></i></a>
               <i class="fas fa-envelope"></i>
             </span>
