changed main background photo and name logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <div class="navbar navbar-fixed-top">
         <div class="container">
-          <h1><a href="index.html" style="text-decoration: none">ashly.</a>
+          <h1><a href="index.html" style="text-decoration: none"><img src="https://fontmeme.com/permalink/180806/8417ef5e4b5a6bbc7c47f4953f6ee913.png" alt="cursive-fonts" border="0" height="50"></a>
             <span class="navbar-text navbar-right">
               <a href="https://www.linkedin.com/in/ashly-lau" rel="external nofollow"><i class="fab fa-linkedin"></i></a>
               <a href="https://github.com/ashlylau" rel="external nofollow"><i class="fab fa-github"></i></a>
@@ -64,7 +64,7 @@
     </div> -->
 
     <div id="image" class="top-margin container">
-      <img src="./img/tumblr.jpg" class="img-responsive" alt="ashly lau website image">
+      <img src="./img/background.jpg" class="img-responsive" alt="ashly lau website image">
     </div>
 
 
@@ -72,8 +72,8 @@
       <h1>about</h1>
       <p>computing student at imperial college london</p>
       <p>software r&d intern at hp inc</p>
-      <p>accredited womens' artistic gymnastics judge</p>
       <p>ex-national gymnast</p>
+      <p>accredited artistic gymnastics judge</p>
       <p>aspiring freelance web developer</p>
       <p>amateur freerunner</p>
       <p>tv show binge watcher</p>
@@ -149,7 +149,7 @@
           <img src="./img/sglogo.png" class="media-object" style="width:80px" alt="ashly lau national artistic gymnast">
         </div>
         <div class="media-body">
-          <h4 class="media-heading">National Gymnast</h4>
+          <h4 class="media-heading">National Team Gymnast</h4>
           <h5>Singapore Gymnastics</h5>
           <h6>Jan 2012 - Dec 2016</h6>
           <p class="hide-mobile">Competitions include:</p>
