--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="ashly lau" content="online resume for things about Ashly that are cool and not on her LinkedIn page">
-    <meta name="viewport" content="width=device-width; minimum-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1">
     <link rel="canonical" href="https://ashlylau.github.io/">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/mystylesheet.css">
@@ -21,7 +21,7 @@
     <header>
       <div class="navbar navbar-fixed-top">
         <div class="container">
-          <h1><a href="index.html" style="text-decoration: none">ashly.</a>
+          <h1><a href="index.html" style="text-decoration: none"><img src="https://fontmeme.com/permalink/180806/8417ef5e4b5a6bbc7c47f4953f6ee913.png" alt="cursive-fonts" border="0" height="50"></a>
             <span class="navbar-text navbar-right">
               <a href="https://www.linkedin.com/in/ashly-lau" rel="external nofollow"><i class="fab fa-linkedin"></i></a>
               <a href="https://github.com/ashlylau" rel="external nofollow"><i class="fab fa-github"></i></a>
